[project]
name = "cpg"
version = "0.1.0"
description = "Mosaic AI agent on Azure Databricks for CPG trade promotion analytics via Unity Catalog, MLflow tracing, Delta tables"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kagglehub[polars-datasets]>=1.0.1",
    "kagglesdk>=0.1.22,<0.1.24",
]
